Day 08 - API Authentication - Register, Login
