# routes/api.php
@@ -1,5 +1,7 @@
 <?php
 
+use App\Http\Controllers\Auth\LoginController;
+use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\BrandsController;
 use App\Http\Controllers\CategoriesController;
 use App\Http\Controllers\TestController;
@@ -21,6 +23,13 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
+// Ping route.
 Route::get('/test', [TestController::class, 'index']);
-Route::apiResource('categories', CategoriesController::class);
-Route::apiResource('brands', BrandsController::class);
+
+Route::middleware('auth')->group(function () {
+    Route::apiResource('categories', CategoriesController::class);
+    Route::apiResource('brands', BrandsController::class);
+});
+
+Route::post('/login', [LoginController::class, 'login']);
+Route::post('/register', [RegisterController::class, 'register']);
